--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.5.6'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id "org.sonarqube" version "3.3"
 	id 'java'
 }
 
@@ -19,4 +20,12 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "ranjithsaccount_SonarCloudSpringboot"
+    property "sonar.organization", "ranjithsaccount"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
