--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id "org.sonarqube" version "3.3"
 	id 'java'
+	id 'jacoco'
 }
 
 group = 'com.example'
@@ -20,6 +21,12 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+jacocoTestReport {
+  reports {
+    xml.enabled true
+  }
 }
 
 sonarqube {
